--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A glimpse of vulnerable</title>
     <!--javascript-->
-    <script src="/assets/dom.js"></script>
+    <script src="./assets/dom.js"></script>
     <!--css-->
     <link rel="stylesheet" href="./assets/styles/styles.css">
     <!-- fonts -->
