--- a/public/abt-life/story-001.html
+++ b/public/abt-life/story-001.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>about life - story 1</title>
+    <!-- base -->
+    <base href="/aGlimpseOfVulnerable/">
     <!--css-->
     <link rel="stylesheet" href="/assets/styles/styles.css">
     <!-- fonts -->
