removed the base tag again

--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A glimpse of vulnerable</title>
-    <!-- base -->
-    <base href="/aGlimpseOfVulnerable/">
 
     <!--javascript-->
     <script src="./assets/dom.js"></script>
@@ -38,7 +36,7 @@
     </nav>    
     <header>
         <h1>The Secret World of Windah</h1>
-        <img src="./assets/images/homepage-banner-img.jpg" alt="a calm girl lying on a field" class="header-img">
+        <img src="/assets/images/homepage-banner-img.jpg" alt="a soft aesthetic rose photography" class="header-img">
     </header>
     <div class="introduction">
         <h2>welcome to a vulnerable place <br>and if i could be honest with you. . .</h2>
