--- a/public/abt-friendship/story-003.html
+++ b/public/abt-friendship/story-003.html
@@ -36,20 +36,8 @@
     <article class="story-content">
         <h1 class="story-title">003 - we go through honeymoon too</h1>
         <p>
-            i realised friendships have honeymoon phase too when i realised me and my best friends were leaving that glittering sunshine and rainbow phase.
-        </p>
-        <p>
-            did you realise that? that little irritations that were slowly emerging to something big enough to threaten the bond that seemed unbreakable.
-            did you felt the cold distance that burns more than bonfire? little by little you thought it would be fine -- until it didn't. until your eyes opened
-            wide enough to see the realness of who they are. but i think it's kinda beautiful, though... in a way.
-        </p>
-        <p>
-            maybe the phase don't end synchronically, considering that one of them says she still feel like she is in cloud 9 in our friendship. i think she is just
-            a sweet girl. or perhaps, the real ugly me haven't been made clear to her. but why am i so pessimistic about that? why do i want them to see my monster?
-        </p>
-        <p>
-            perhaps, in the end... whether the glasses of roses that we used to see broke or not shouldn't matter when navigating a precious bond between each other.
-            maybe we should just put the glasses down from the start.
+            Friendships go through a honeymoon phase too, when the rose-coloured glasses start to crack day by day. We didn't know, but seeing the vulnerable
+            human parts of them, that is beautifully imperfect, is what will make us more genuinely connected.
         </p>
     </article>
 
