--- a/public/abt-life/story-001.html
+++ b/public/abt-life/story-001.html
@@ -36,29 +36,13 @@
     <article class="story-content">
         <h1 class="story-title">001 - so fragile</h1>
         <p>
-            there are times when you might say, "i have no friends" even when you had best friend(s). 
-            that kinda moments are moments that can amplify that loneliness more.
+            The relationships between humans are so fragile that they can be broken by the slightest shift in the wind of life. We express our adoration
+            only to wish later we did not; we love our best only then to hate that we cared that much.
         </p>
         <p>
-            relationships between humans are so fragile, isn't it? yesterday we were so close. but look at us now --
-            we don't even talk anymore. you know, i have a tendancy to stray away from the stereotypes of not talking anymore,
-            miss you, wish you were here moments -- but i guess we are really all, mostly the same.
+            But that's the thing about humans, that's the thing about life. We don't know if it's permanent or not, so maybe it's the heaven above we should 
+            look up to; and maybe it's not human to cling to, but the one who is worthy to be called "my everything".
         </p>
-        <p>
-            look at you wishing they'd text you first, call you first, miss you more than you miss them.
-            we tend to unconsiously, i think, think about "what about me?" when those cracks starts to appear.
-        </p>
-        <p>
-            maybe i am childish to feel sad when no one is texting me when i feel lonely, or when i wish i had someone to talk to.
-            but, that's the thing... i never really had close friends, nor had i experienced dating irl before. because this is my
-            first
-            experience. do you have to laugh? do you have to make fun of me?
-        </p>
-        <p>
-            in the end, i realised that no matter how hard i try, there will be no one that could save me from this loneliness; but God would.
-            God would. Jesus would.
-        </p>
-        <p>because that's the thing -- relationships between humans are so fragile. so i'll go to God.</p>
 
     </article>
 
