--- a/public/abt-love/story-002.html
+++ b/public/abt-love/story-002.html
@@ -35,23 +35,13 @@
     
     <article class="story-content">
         <h1 class="story-title">002 - when you love someone</h1>
-        <p>on the moment you open your heart, you are exposed to a big gap of vulnerability. so, you'll find that no matter how rocky your heart is
-            or how frozen it is, it will either be shattered into pieces; melting or a literal heart-schattering. 
+        <p>
+            The act of loving is like revealing your skin bare, vulnerable; and to receive love when the beating heart has been wounded before, either 
+            by a person or by the happenings in the world, is like believing someone with a knife won't stab you in the heart. 
         </p>
         <p>
-            the moment you open your heart is to be taken care of, like a careful hand enveloping a baby's hand. i hope the hands that holds you feels like
-            a blanket on a winter, and a breeze that cools on a summer day. or a cold watermelon straight from the refrigerator. cool right? because to be safe
-            in love feels like a mother's hug, and the awakening of a little child in the body of an adult. like you. like me. 
-        </p>
-        <p>
-            and so... loving someone <em>is</em> very beautiful. a lot of poetries was inspired by it. but also, to love someone is to let them see the monster
-            that sits at the corner of your heart. "see, this is me." and does they stay? i hope for you that they do, and i hope for them that you do too. i hope
-            i don't have to wonder if the encounter was bitter or sweet. but then again, there is no pure sweet nor bitter--in my opinion--in this world. at the end,
-            we will cry in the sweetness, and we will laugh in the bitterness of it all.
-        </p>
-        <p>
-            in the end, a heart, whomever it belongs, are precious. so guard your heart, because from it flows life. and no matter how sweet you are, i hope that at least,
-            you will choose the person who'll gonna handle your heart, carefully.
+            But would you believe me if I told you that I had met someone who doesn't carry a knife around? He is like a walking peace; The Prince of Peace, and his name is Jesus
+            Christ and his words will give you light, peace, and joy. He is the way, the truth, and the life.
         </p>
     </article>
     
