--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
         <h1>The Secret World of Windah</h1>
         <img src="/assets/images/homepage-banner-img.jpg" alt="a soft aesthetic rose photography" class="header-img">
     </header>
+
+    <section class="site-note">
+        <p>
+    This site is a personal project to showcase my web development skills using HTML, CSS, and JavaScript. Some content reflects my own reflections — feel free to explore, but the focus is on structure and design.
+        </p>
+    </section>
     <div class="introduction">
         <h2>welcome to a vulnerable place <br>and if i could be honest with you. . .</h2>
     </div>
