--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <section class="site-note">
         <p>
-    This site is a personal project to showcase my web development skills using HTML, CSS, and JavaScript. Some content reflects my own reflections — feel free to explore, but the focus is on structure and design.
+    This site is a personal project to showcase my current web development skills using HTML, CSS, and JavaScript. Some content reflects my own reflections — feel free to explore, but the focus is on structure and design.
         </p>
     </section>
     <div class="introduction">
